# arch-wiki-docs

./: .gitignore  ArchWiki.py  ArchWikiDownloader.py  ArchWikiOfflineOptimizer.py  ArchWikiOptimizer.py  PKGBUILD  README.md  arch-wiki-docs.py  pyproject.toml
ArchWiki/: ArchWiki.py  __init__.py  converter.py  downloader.py  optimizer.py
